Fixed alignment and sizing
Awaiting high res assets

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+
 a{
 	color: #283593;
 	text-decoration: none;
@@ -35,14 +37,23 @@ section#status{
 	background-image: url("res/WINNER\ textbox.png");
 	background-size: cover;
 	color: #FFFFFF;
-	font-size: 25px;
-	font-family: 'Poppins', monospace;
+	font-size: 45px;
+	font-family: 'Righteous', cursive;
+	min-height: 70px;
+	align-items: center;
+	display: flex;
+	justify-content: center;
 }
 section#Slots{
-	border-radius: 15px;
-	background-image: url("res/Rectangle.png");
+	border-radius:15px;
+	background-image: url("res/glow-outline.png");
 	background-position: center;
 	background-size: cover;
+	background-repeat: no-repeat;
+	min-height: 180px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 section#Gira{
 	margin-top: 25px;
@@ -55,10 +66,18 @@ section#Gira{
 	background-position: bottom;
 	color: #FFFFFF;
 	font-size: 25px;
+	min-height: 70px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-family: 'Righteous', cursive;
+	font-size: 50px;
 }
+
 section#Gira:hover{
-	background-color: #1176bc;
-}
+	cursor: pointer;
+} 
+
 section#options{
 	margin-top: 20px;
 	padding-top: 5px;
@@ -92,16 +111,16 @@ section#info{
 	height: 150px;
 }
 .a1{
-	background-image: url("/res/tiles/Adventure.png");
+	background-image: url("/res/tiles/1.png");
 }
 .a2{
-	background-image: url("/res/tiles/All-Stars.png");
+	background-image: url("/res/tiles/2.png");
 }
 .a3{
-	background-image: url("/res/tiles/Dare\ to\ be\ ourselves.png");
+	background-image: url("/res/tiles/3.png");
 }
 .a4{
-	background-image: url("/res/tiles/Dreamwork.png");
+	background-image: url("/res/tiles/4.png");
 }
 /* .a5{
 	background-image: url("https://betsoftware.com/wp-content/uploads/sites/4/2021/11/Icons-R5-03-2-1024x1024.png");
@@ -120,5 +139,14 @@ section#info{
 	background-position: center center;
 	height: 100vh;
 	margin: 0;
-	padding: 50px;
+	display: flex;
+	align-items: center;
+}
+
+.slot-bg{
+	background-image: url("/res/Rectangle\ 2.png");
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	border-radius: 15px;
 }
